# IaraMCP

./: .gitignore  AGENTE.md  Dockerfile  Dockerfile-lite  INICIO_AQUI.md  INSTRUCOES_MULTI_TRANSPORTE.md  LICENSE  MANUAL.md  MANUAL_COMPLETO.md  README.md  SUAMISSAO.md  claude_desktop_config_exemplo.json  debug_mcp.py  final_test.py  inspector_config_http.json  mcp_config.json  package.json  project_specs.md  prompt.md  pyproject.toml  requirements-docker.txt  requirements-lite.txt  requirements.txt  resumo.md  smithery.config.js  start_iaramcp.sh  start_iaramcp_escolher.sh  start_iaramcp_http.sh  start_inspector_correto.sh  start_inspector_http.sh  test_basic.py
.claude/: settings.local.json
arquivo/: smithery.yaml
lite/: smithery.yaml
scripts/: start_http.sh  start_inspector.sh  start_server.sh  start_sse.sh  start_stdio.sh
src/iaramcp/: server.py  server_claude.py  server_fastmcp.py  server_fixed.py  server_minimal.py  server_multi_transport.py  server_simple.py  server_universal.py
src/iaramcp/audio/: analysis.py  separation.py  utils.py
src/iaramcp/ml/: __init__.py  classifier.py
src/iaramcp/optimization/: __init__.py  performance.py
src/iaramcp/visualization/: __init__.py  plots.py
