[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iaramcp"
version = "0.1.0"
description = "IaraMCP - Servidor MCP para Análise Musical Avançada"
authors = [
    {name = "IaraMCP", email = "noreply@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "librosa>=0.10.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "soundfile>=0.12.0",
]

[project.optional-dependencies]
advanced = [
    "demucs>=4.0.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "essentia>=2.1b6.dev858",
    "madmom>=0.16.1",
]

[project.scripts]
iaramcp = "iaramcp.server_fastmcp:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"